--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.25.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.1",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
